troca de 2 graficos e 2 KPIS para 1 grafico e 4 KPIS

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -30,7 +30,8 @@
             <a href="personalizar.html" class="button-style userBtn"><span
                     class="material-icons">format_paint</span><span>Personalizar</span></a>
             <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
-                <span>Sair</span></div>
+                <span>Sair</span>
+            </div>
         </div>
     </section>
     <div class="info">
@@ -39,15 +40,22 @@
                 <section class="high-kpis">
                     <section class="kpi-fire">
                         <div class="high-txt high-red">Média de Ataques de Fogo por Segundo<br>(Agni Kai)</div>
-                        <div id="kpiAgniKai" class="high-data">12</div>
+                        <div id="kpiAgniKai" class="high-data"></div>
                     </section>
                     <section class="kpi-earth">
                         <div class="high-txt high-green">Acertos Totais<br>(Toph Game)</div>
-                        <div id="kpiTophGame" class="high-data">19</div>
+                        <div id="kpiTophGame" class="high-data"></div>
                     </section>
                 </section>
-                <section class="quiz-performance">
-                    <canvas id="dash" class="dash"></canvas>
+                <section class="low-kpis">
+                    <section class="kpi-water">
+                        <div class="high-txt high-blue">Total de Alternativas Corretas<br>(Quiz)</div>
+                        <div id="kpiQuiz" class="high-data"></div>
+                    </section>
+                    <section class="kpi-air">
+                        <div class="high-txt high-grey">Maior Número de vezes que pegou Aang<br>(Pega Pega)</div>
+                        <div id="kpiCatchgame" class="high-data"></div>
+                    </section>
                 </section>
             </div>
             <section class="kpi-dobra">
