--- a/public/dashboard/ranking.html
+++ b/public/dashboard/ranking.html
@@ -46,8 +46,8 @@
           <div class="towerWinnerTop2 towerWinnerTop2Fogo">
             <div class="fotoSimbolTop2"></div>
             <div class="winnerInfoTop2">
-              <span id="name_user2Fogo">Usuario</span>
-              <span id="data_user2Fogo">6.5</span>
+              <span id="name_user2Fogo"></span>
+              <span id="data_user2Fogo"></span>
             </div>
           </div>
         </div>
@@ -56,8 +56,8 @@
           <div class="towerWinnerTop1 towerWinnerTop1Fogo">
             <div class="fotoSimbolTop1"></div>
             <div class="winnerInfoTop1">
-              <span id="name_user1Fogo">Usuario</span>
-              <span id="data_user1Fogo">7.8</span>
+              <span id="name_user1Fogo"></span>
+              <span id="data_user1Fogo"></span>
             </div>
           </div>
         </div>
@@ -66,8 +66,8 @@
           <div class="towerWinnerTop3 towerWinnerTop3Fogo">
             <div class="fotoSimbolTop3"></div>
             <div class="winnerInfoTop3">
-              <span id="name_user3Fogo">Usuario</span>
-              <span id="data_user3Fogo">5.9</span>
+              <span id="name_user3Fogo"></span>
+              <span id="data_user3Fogo"></span>
             </div>
           </div>
         </div>
