link kpi ar + front css da dash alterado + botão logout

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -43,7 +43,7 @@
                 <div class="content-high-msg">
                     <div class="usuario-msg">
                         <div id="photo_msg"></div>
-                        <div id="name_usuario">usuario</div>
+                        <div class="txtNameUsuario" id="name_usuario"></div>
                     </div>
                     <div class="msg-usuario">
                         <textarea class="txt-usuario" id="msgBox" maxlength="240"></textarea>
