--- a/public/dashboard/personalizar.html
+++ b/public/dashboard/personalizar.html
@@ -34,10 +34,21 @@
         </div>
     </section>
     <section id="personal" class="personal-content">
+        <div id="cardLogin" class="login-card">
+            <div class="txt-card-login">
+                <p>Tem certeza que quer sair<br> da sua Conta? 😓</p>
+                <span>Para acessar áreas de dobras elementais você precisa estar logado.</span>
+            </div>
+            <div class="button-card-login">
+                <span onclick="closeExit()" class="button-exitt alert">Voltar</span>
+                <span onclick="accountExit()" class="button-register alert">Sim, quero Sair</span>
+            </div>
+        </div>
         <section class="personal">
             <div class="btn-personal">
                 <div class="tradeName btn-card">Mudar informações</div>
                 <div class="tradePicture  btn-card">Mudar Foto</div>
+                <div class="exitAccount btn-card">Sair da Conta</div>
             </div>
         </section>
         <section class="content-name">
