--- a/public/dashboard/ranking.html
+++ b/public/dashboard/ranking.html
@@ -35,10 +35,10 @@
   <section class="container">
     <section class="section" id="section1">
       <button class="btn-left" onclick="prevSection()">◀</button>
-      <div class="content">
+      <div class="content contentFire">
         <div class="txt-game">
           <h1 class="big-txt">Agni Kai</h1>
-          <p class="small-txt">Média de Ataques de Fogo</p>
+          <p class="small-txt">Ataques de Fogo por segundo</p>
           <p class="small-txt">(Por Jogo)</p>
         </div>
         <div class="container-top">
@@ -77,9 +77,9 @@
     </section>
     <section class="section" id="section2">
       <button class="btn-left" onclick="prevSection()">◀</button>
-      <div class="content">
+      <div class="content contentAir">
         <div class="txt-game">
-          <h1 class="big-txt">Catch Game</h1>
+          <h1 class="big-txt">Pega Pega</h1>
           <p class="small-txt">Vezes que pegou Aang</p>
           <p class="small-txt">(Por Jogo)</p>
         </div>
@@ -118,7 +118,7 @@
     </section>
     <section class="section" id="section3">
       <button class="btn-left" onclick="prevSection()">◀</button>
-      <div class="content">
+      <div class="content contentWater">
         <div class="txt-game">
           <h1 class="big-txt">Quiz Água</h1>
           <p class="small-txt">Mais Acertos</p>
@@ -159,7 +159,7 @@
     </section>
     <section class="section" id="section4">
       <button class="btn-left" onclick="prevSection()">◀</button>
-      <div class="content">
+      <div class="content contentEarth">
         <div class="txt-game">
           <h1 class="big-txt">Toph Game</h1>
           <p class="small-txt">Mais Acertos</p>
