--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -38,12 +38,10 @@
 
         <section id="history" class="historia">
             <div class="txt-historia">
-                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos, adjacente a
-                    um mundo espiritual paralelo. A civilização humana é dividida em quatro nações, cujos nomes são
+                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos. A civilização humana é dividida em quatro nações, cujos nomes são
                     derivados dos quatro elementos clássicos: as Tribos da Água, o Reino da Terra, a Nação do Fogo, e os
                     Nômades do Ar. Cada nação possui uma sociedade com sua própria cultura, distinta das demais, em que
-                    algumas pessoas conhecidas como "dominadores" (dominadores de água, dominadores de terra,
-                    dominadores de fogo e dominadores de ar) possuem a habilidade de telecineticamente manipular e
+                    algumas pessoas conhecidas como "dominadores" possuem a habilidade de telecineticamente manipular e
                     controlar o elemento de sua nação utilizando artes marciais. O Avatar é a única pessoa com a
                     habilidade de dominar todos os quatro elementos.
 
@@ -123,16 +121,6 @@
                 <button class="button-agnikai go" onclick="goAgniKai()">Entrar</button>
             </div>
             <div class="zuko-fire"></div>
-        </section>
-        <section id="aboutMe" class="aboutMe">
-            <div class="carrosel">
-                <div class="container">
-                    <img src="assets/zukoFire.jpg" alt="">
-                    <img src="assets/tophSolo.png" alt="">
-                    <img src="assets/aangAir.jpg" alt="">
-                    <img src="assets/kataraSolo.png" alt="">
-                </div>
-            </div>
         </section>
     </main>
     <div id="cardLogin" class="login-card">
