--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,10 @@
 
         <section id="history" class="historia">
             <div class="txt-historia">
-                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos, adjacente a
-                    um mundo espiritual paralelo. A civilização humana é dividida em quatro nações, cujos nomes são
+                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos. A civilização humana é dividida em quatro nações, cujos nomes são
                     derivados dos quatro elementos clássicos: as Tribos da Água, o Reino da Terra, a Nação do Fogo, e os
                     Nômades do Ar. Cada nação possui uma sociedade com sua própria cultura, distinta das demais, em que
-                    algumas pessoas conhecidas como "dominadores" (dominadores de água, dominadores de terra,
-                    dominadores de fogo e dominadores de ar) possuem a habilidade de telecineticamente manipular e
+                    algumas pessoas conhecidas como "dominadores" possuem a habilidade de telecineticamente manipular e
                     controlar o elemento de sua nação utilizando artes marciais. O Avatar é a única pessoa com a
                     habilidade de dominar todos os quatro elementos.
 
@@ -63,7 +61,7 @@
         </section>
 
 
-        <section class="air" id="air">
+        <section class="air gameBox" id="air">
             <div class="aang-air"></div>
             <div class="txt-air txt">
                 <h1>Avatares</h1>
@@ -77,7 +75,7 @@
             </div>
         </section>
 
-        <section class="water" id="water">
+        <section class="water gameBox" id="water">
             <div class="txt-water txt">
                 <h1>Quiz Avatar</h1>
                 <p> Bem-vindo ao Quiz de Avatar: A Lenda de Aang! Prepare-se para embarcar em uma jornada
@@ -90,7 +88,7 @@
             <div class="katara-water"></div>
         </section>
 
-        <section class="earth" id="earth">
+        <section class="earth gameBox" id="earth">
             <div class="toph-earth"></div>
             <div class="txt-earth txt">
                 <h1>Toph Game</h1>
@@ -103,7 +101,7 @@
                 <button class="button-earth go" onclick="goTophGame()">Entrar</button>
             </div>
         </section>
-        <section id="fire" class="fire">
+        <section id="fire " class="fire gameBox">
             <div class="txt-fire txt">
                 <h1>Agni Kai</h1>
                 <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
@@ -118,16 +116,6 @@
                 <button class="button-agnikai go" onclick="goAgniKai()">Entrar</button>
             </div>
             <div class="zuko-fire"></div>
-        </section>
-        <section id="aboutMe" class="aboutMe">
-            <div class="carrosel">
-                <div class="container">
-                    <img src="assets/zukoFire.jpg" alt="">
-                    <img src="assets/tophSolo.png" alt="">
-                    <img src="assets/aangAir.jpg" alt="">
-                    <img src="assets/kataraSolo.png" alt="">
-                </div>
-            </div>
         </section>
     </main>
     <div id="cardLogin" class="login-card">
