--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,17 @@
             <a href="#earth" class="earth-button standard"></a>
             <a href="#fire" class="fire-button standard"></a>
             <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
-            <a id="buttonLogin" href="cadastrologin.html" class="register-button"><span class="button-content">Login</span></a>
-         
+            <a id="buttonLogin" href="cadastrologin.html" class="register-button"><span
+                    class="button-content">Login</span></a>
+
         </nav>
     </section>
     <main>
 
         <section id="history" class="historia">
             <div class="txt-historia">
-                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos. A civilização humana é dividida em quatro nações, cujos nomes são
+                <p>Avatar: A Lenda de Aang é ambientada em um mundo que abriga humanos e animais híbridos. A civilização
+                    humana é dividida em quatro nações, cujos nomes são
                     derivados dos quatro elementos clássicos: as Tribos da Água, o Reino da Terra, a Nação do Fogo, e os
                     Nômades do Ar. Cada nação possui uma sociedade com sua própria cultura, distinta das demais, em que
                     algumas pessoas conhecidas como "dominadores" possuem a habilidade de telecineticamente manipular e
@@ -101,7 +103,7 @@
                 <button class="button-earth go" onclick="goTophGame()">Entrar</button>
             </div>
         </section>
-        <section id="fire " class="fire gameBox">
+        <section id="fire" class="fire gameBox">
             <div class="txt-fire txt">
                 <h1>Agni Kai</h1>
                 <p>Agni Kai é o nome para duelos entre dobradores de fogo. Alguns, mas não
@@ -132,4 +134,3 @@
 
 </html>
 <script src="js/home.js"></script>
-
