Animações e estilização ATLA

--- a/public/atla.html
+++ b/public/atla.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/atla.css">
     <link rel="shortcut icon" href="assets/miniAang.webp">
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>Dobras</title>
 </head>
 
@@ -38,7 +39,7 @@
         </section>
 
         <section class="origin">
-            <div class="earth-card element">
+            <div class="earth-card element animationLeft">
                 <div class="container-img">
                     <div class="img-card toupeira-img"></div>
                 </div>
@@ -49,7 +50,7 @@
                         terremotos.</span>
                 </div>
             </div>
-            <div class="fire-card element">
+            <div class="fire-card element animationLeft">
                 <div class="container-img">
                     <div class="img-card dragon"></div>
                 </div>
@@ -60,7 +61,7 @@
                         maestria.</span>
                 </div>
             </div>
-            <div class="air-card element">
+            <div class="air-card element animationRight">
                 <div class="container-img">
                     <div class="img-card bisao-img"></div>
                 </div>
@@ -71,7 +72,7 @@
                     </span>
                 </div>
             </div>
-            <div class="water-card element">
+            <div class="water-card element animationRight">
                 <div class="container-img">
                     <div class="img-card moon"></div>
                 </div>
@@ -87,10 +88,8 @@
             <div class="high-themes"><span>Temas abordados em Avatar</span></div>
             <div class="content-explanation">
                 <div class="left-explanation">
-                    <div class="container-txt-explanation">
+                    <div class="container-txt-explanation animationLeft">
                         <span class="txt-explanation">
-
-
                             "Avatar: The Last Airbender" é uma série de animação que, apesar de seu público-alvo mais
                             jovem, aborda uma série de temas pesados e complexos de maneira profunda e envolvente. Ao
                             longo de seus três livros, a série apresenta uma narrativa rica e personagens bem
@@ -101,15 +100,15 @@
                         </span>
                     </div>
                 </div>
-                <div class="right-explanation">
+                <div class="right-explanation animationRight">
                     <div class="img-explanation"></div>
                 </div>
             </div>
 
             <div class="content-themes">
-                <div class="mid-txt"><span>Temas Complexos</span></div>
+                <div class="mid-txt"><span>The Last Airbender</span></div>
                 <div class="themes-content-one">
-                    <div class="box-themes">
+                    <div class="box-themes animationTop">
                         <div class="img-box img-box1"></div>
                         <div class="box-content">
                             <div class="title-box title-box1">Guerras</div>
@@ -120,7 +119,7 @@
                                     deslocamento de pessoas.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationTop">
                         <div class="img-box img-box2"></div>
                         <div class="box-content">
                             <div class="title-box title-box2">Genocídio</div>
@@ -129,16 +128,16 @@
                                     de impedir que o próximo Avatar (Aang) nascesse.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationTop">
                         <div class="img-box img-box3"></div>
                         <div class="box-content">
                             <div class="title-box title-box3">Colonização</div>
                             <div class="txt-box txt-box3"><span>A Nação do Fogo tenta impor sua vontade e cultura sobre
                                     os outros reinos, ilustrando os males do imperialismo e da colonização. Vemos isso
-                                    especialmente nas terras da Tribo da Água do Sul e da Terra do Reino.</span></div>
+                                    especialmente nas terras da Tribo da Água do Sul e do Reino da Terra.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationTop">
                         <div class="img-box img-box4"></div>
                         <div class="box-content">
                             <div class="title-box title-box4">Perda e Luto</div>
@@ -149,19 +148,14 @@
                     </div>
                 </div>
                 <div class="themes-content-two">
-                    <div class="box-themes">
+                    <div class="box-themes animationBottom">
                         <div class="img-box img-box5"></div>
                         <div class="box-content">
                             <div class="title-box title-box5">Problemas Familiares</div>
-                            <div class="txt-box txt-box5"><span>As complexas dinâmicas familiares são exploradas através
-                                    de personagens como Zuko, Azula, e sua relação com seu pai Ozai e sua mãe Ursa. A
-                                    série mostra como as relações familiares podem ser fontes de apoio e conflito, e
-                                    como traumas familiares podem impactar profundamente o desenvolvimento individual. A
-                                    busca de Zuko por aceitação e amor paterno, e sua eventual reconciliação com Iroh,
-                                    destaca a importância da família e do perdão.</span></div>
+                            <div class="txt-box txt-box5"><span>As complexas dinâmicas familiares são exploradas através de personagens como Zuko, Azula e sua relação com seu pai Ozai e sua mãe Ursa. A busca de Zuko por aceitação e amor paterno, e sua eventual reconciliação com Iroh, destaca a importância da família e do perdão.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationBottom">
                         <div class="img-box img-box6"></div>
                         <div class="box-content">
                             <div class="title-box title-box6">Perdão e Redenção</div>
@@ -170,7 +164,7 @@
                                     perdão, tanto a busca por ele quanto a concessão.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationBottom">
                         <div class="img-box img-box7"></div>
                         <div class="box-content">
                             <div class="title-box title-box7">Traumas e Recuperação</div>
@@ -179,7 +173,7 @@
                                     Toph, entre outros, enfrentam e superam traumas profundos.</span></div>
                         </div>
                     </div>
-                    <div class="box-themes">
+                    <div class="box-themes animationBottom">
                         <div class="img-box img-box8"></div>
                         <div class="box-content">
                             <div class="title-box title-box8">Preconceito</div>
@@ -195,7 +189,9 @@
         </section>
 
     </div>
+    <script src="js/atla.js"></script>
 </body>
 
 </html>
-<script src="js/air-aang.js"></script>
+
+
