--- a/public/indexLogado.html
+++ b/public/indexLogado.html
@@ -24,7 +24,7 @@
             <a href="#water" class="water-button standard"></a>
             <a href="#earth" class="earth-button standard"></a>
             <a href="#fire" class="fire-button standard"></a>
-            <a href="#aboutMe" class="aboutMe-button standard">Sobre Mim</a>
+            <a href="./atla.html" class="aboutMe-button standard">Sobre Mim</a>
             <a id="buttonPainel" href="dashboard/dashboard.html" class="register-button"><span class="button-content">Painel</span></a>
             <div class="perfil">
                 <div id="photo_usuario" class="photo"></div>
