arrumando alguns bugs, alterações de css na dashboard0

--- a/public/atla.html
+++ b/public/atla.html
@@ -19,7 +19,7 @@
             <p>Temas Abordados na Série Animada</p>
         </section>
         <section class="cycle-avatar">
-            <div class="txt-cycle"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é
+            <div class="txt-cycle animationLeft"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é
                     manter a harmonia entre as quatro nações e atuar como um mediador entre seres humanos e espíritos.
                     Quando o Avatar morre, o seu espírito é reencarnado no próximo Avatar, que será da próxima nação em
                     uma sequência conhecida como o ciclo do Avatar: Nação do Fogo, Nômades do Ar, Tribos da Água, e
@@ -31,10 +31,10 @@
         <section class="latest-avatars">
             <div class="overlay2"></div>
             <div class="box-card">
-                <div class="kyoshi-card card"></div>
-                <div class="roku-card card"></div>
-                <div class="aang-card card"></div>
-                <div class="korra-card card"></div>
+                <div class="kyoshi-card card animationTop"></div>
+                <div class="roku-card card animationBottom"></div>
+                <div class="aang-card card animationTop"></div>
+                <div class="korra-card card animationBottom"></div>
             </div>
         </section>
 
