--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -28,7 +28,7 @@
             <a href="ranking.html" class="button-style userBtn"><span
                     class="material-icons">emoji_events</span><span>Ranking</span></a>
             <a href="personalizar.html" class="button-style userBtn"><span
-                    class="material-icons">format_paint</span><span>Personalizar</span></a>
+                    class="material-icons">format_paint</span><span>Conta</span></a>
             <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
                 <span>Sair</span>
             </div>
