--- a/public/dashboard/personalizar.html
+++ b/public/dashboard/personalizar.html
@@ -27,7 +27,7 @@
                     class="material-icons">emoji_events</span><span>Ranking</span></a>
             <a href="#personal" class="button-style userBtn"><span class="miniAang"></span><span
                     class="material-icons pagSelected">format_paint</span><span
-                    class="pagSelected">Personalizar</span></a>
+                    class="pagSelected">Conta</span></a>
             <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
                 <span>Sair</span>
             </div>
