--- a/public/dashboard/ranking.html
+++ b/public/dashboard/ranking.html
@@ -26,7 +26,7 @@
       <a href="ranking.html" class="button-style userBtn"><span class="miniAang"></span><span
           class="material-icons pagSelected">emoji_events</span><span class="pagSelected">Ranking</span></a>
       <a href="personalizar.html" class="button-style userBtn"><span
-          class="material-icons">format_paint</span><span>Personalizar</span></a>
+          class="material-icons">format_paint</span><span>Conta</span></a>
       <div onclick="sair()" class="button-exit userBtn"><span class="material-icons">logout</span>
         <span>Sair</span>
       </div>
