alteração de proporções de txt

--- a/public/atla.html
+++ b/public/atla.html
@@ -15,8 +15,7 @@
     <div class="x-moviment">
         <section class="High">
             <div class="overlay"></div>
-            <h1>Avatar The Last Airbender</h1>
-            <p>Temas Abordados na Série Animada</p>
+            <h1>Avatar O Último Dobrador do Ar</h1>
         </section>
         <section class="cycle-avatar">
             <div class="txt-cycle animationLeft"><span>O Avatar, que pode ser homem ou mulher, é um árbitro internacional cujo dever é
@@ -131,8 +130,8 @@
                     <div class="box-themes animationTop">
                         <div class="img-box img-box3"></div>
                         <div class="box-content">
-                            <div class="title-box title-box3">Colonização</div>
-                            <div class="txt-box txt-box3"><span>A Nação do Fogo tenta impor sua vontade e cultura sobre
+                            <div class="title-box title-box1">Colonização</div>
+                            <div class="txt-box txt-box1"><span>A Nação do Fogo tenta impor sua vontade e cultura sobre
                                     os outros reinos, ilustrando os males do imperialismo e da colonização. Vemos isso
                                     especialmente nas terras da Tribo da Água do Sul e do Reino da Terra.</span></div>
                         </div>
@@ -140,8 +139,8 @@
                     <div class="box-themes animationTop">
                         <div class="img-box img-box4"></div>
                         <div class="box-content">
-                            <div class="title-box title-box4">Perda e Luto</div>
-                            <div class="txt-box txt-box4">Aang lida com a perda de seu povo e a culpa de ter abandonado
+                            <div class="title-box title-box2">Perda e Luto</div>
+                            <div class="txt-box txt-box2">Aang lida com a perda de seu povo e a culpa de ter abandonado
                                 suas responsabilidades. Katara e Sokka lidam com a perda de sua mãe e a ausência de seu
                                 pai devido à guerra.<span></span></div>
                         </div>
@@ -151,15 +150,15 @@
                     <div class="box-themes animationBottom">
                         <div class="img-box img-box5"></div>
                         <div class="box-content">
-                            <div class="title-box title-box5">Problemas Familiares</div>
-                            <div class="txt-box txt-box5"><span>As complexas dinâmicas familiares são exploradas através de personagens como Zuko, Azula e sua relação com seu pai Ozai e sua mãe Ursa. A busca de Zuko por aceitação e amor paterno, e sua eventual reconciliação com Iroh, destaca a importância da família e do perdão.</span></div>
+                            <div class="title-box title-box1">Problemas Familiares</div>
+                            <div class="txt-box txt-box1"><span>As complexas dinâmicas familiares são exploradas através de personagens como Zuko, Azula e sua relação com seu pai Ozai e sua mãe Ursa. A busca de Zuko por aceitação e amor paterno, e sua eventual reconciliação com Iroh, destaca a importância da família e do perdão.</span></div>
                         </div>
                     </div>
                     <div class="box-themes animationBottom">
                         <div class="img-box img-box6"></div>
                         <div class="box-content">
-                            <div class="title-box title-box6">Perdão e Redenção</div>
-                            <div class="txt-box txt-box6"><span>Personagens como Zuko passam por arcos de redenção,
+                            <div class="title-box title-box2">Perdão e Redenção</div>
+                            <div class="txt-box txt-box2"><span>Personagens como Zuko passam por arcos de redenção,
                                     mostrando que é possível mudar e buscar perdão. A série explora a complexidade do
                                     perdão, tanto a busca por ele quanto a concessão.</span></div>
                         </div>
@@ -167,8 +166,8 @@
                     <div class="box-themes animationBottom">
                         <div class="img-box img-box7"></div>
                         <div class="box-content">
-                            <div class="title-box title-box7">Traumas e Recuperação</div>
-                            <div class="txt-box txt-box7"><span>Muitos personagens lidam com traumas emocionais e
+                            <div class="title-box title-box1">Traumas e Recuperação</div>
+                            <div class="txt-box txt-box1"><span>Muitos personagens lidam com traumas emocionais e
                                     físicos, e a série mostra seus caminhos para a recuperação. Aang, Zuko, Katara e
                                     Toph, entre outros, enfrentam e superam traumas profundos.</span></div>
                         </div>
@@ -176,8 +175,8 @@
                     <div class="box-themes animationBottom">
                         <div class="img-box img-box8"></div>
                         <div class="box-content">
-                            <div class="title-box title-box8">Preconceito</div>
-                            <div class="txt-box txt-box8"><span>A série aborda preconceitos entre diferentes nações e
+                            <div class="title-box title-box2">Preconceito</div>
+                            <div class="txt-box txt-box2"><span>A série aborda preconceitos entre diferentes nações e
                                     dentro de grupos, como a discriminação contra não-dobradores e dobradores de
                                     diferentes elementos. Alguns episódios como mostram como preconceitos e estereótipos
                                     podem ser prejudiciais e como é importante superar esses obstáculos para alcançar a
@@ -189,6 +188,7 @@
         </section>
 
     </div>
+    <footer><span>Feito por Juan Melo Oliveira © 2024</span></footer>
     <script src="js/atla.js"></script>
 </body>
 
