--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,7 @@
             <span onclick="goLogin()" class="button-register alert">Fazer-Login</span>
         </div>
     </div>
+    <footer><span>Feito por Juan Melo Oliveira © 2024</span></footer>
 </body>
 
 </html>
