--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <script src="dashboard.js" async></script>
     <link rel="stylesheet" href="dashboard.css">
     <title>Painel</title>
