--- a/public/dashboard/personalizar.html
+++ b/public/dashboard/personalizar.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/miniAang.webp">
     <link rel="stylesheet" href="personalizar.css">
     <title>Document</title>
 </head>
