--- a/public/water-quiz.html
+++ b/public/water-quiz.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/water-quiz.css">
-    <script src="js/water-quiz.js" async></script>
+    
     <link rel="shortcut icon" href="assets/miniAang.webp">
     <title>Quiz Avatar</title>
 </head>
@@ -13,12 +13,8 @@
 <style>
     .bg-water {
         opacity: 1;
-        transition: opacity 1s ease; /* Adiciona uma transição suave de 1 segundo para a propriedade de opacidade */
+        transition: opacity 1s ease; 
     }
-    /* Opcional: Se você quiser que o vídeo comece com uma transição, defina a opacidade inicialmente como 0 */
-    /* .bg-water {
-        opacity: 0;
-    } */
 </style>
 
 
@@ -46,6 +42,7 @@
             <button class="start-quiz button">Começar Quiz</button>
         </div>
     </section>
+    <script src="js/water-quiz.js"></script>
 </body>
 
 </html>
